# shiny-barnacle

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  TESTING_STRATEGY.md  agent_detection.py  archive.py  flake.nix  llm-proxy.service  llm-proxy.user.service  paths.py  proxy.py  pyproject.toml  toolbridge.py  toolbridge.service  toolbridge.user.service  transform_proxy.py
docs/: session-viewer-project-plan.md  sessions.md  testing-patterns.md
docs/plans/: proxy.md
schemas/: admin-sessions.d.ts  admin-sessions.json
scripts/: activate.sh  env.sh  run.sh
tests/: __init__.py  test_agent_detection.py  test_archive.py  test_config.py
